# news-tour

./: Cargo.toml  Procfile  README.md
config/: news.toml  slack.toml
src/: lib.rs  main.rs  news.rs  settings.rs  slack.rs
src/news/: request.rs  response.rs
