[package]
name = "news-tour"
version = "0.1.0"
authors = ["nnsnico <yuji.jampan.blue@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "1.8", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.9"

